--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
+    "sass": "^1.57.1",
     "yup": "^0.32.11"
   },
   "scripts": {
