--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -48,6 +47,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.1.6",
     "vite": "^3.0.3"
   }
