--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
