--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.7",
