--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,6 +50,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.1.6",
     "vite": "^3.0.3"
   }
