--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
+    "leaflet-routing-machine": "^3.2.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet-routing-machine": "^3.2.4",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
