--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
+    "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
