--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "dateformat": "^5.0.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
@@ -26,6 +27,7 @@
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "socket.io-client": "^4.6.1",
+    "stripe": "^11.14.0",
     "yup": "^0.32.11"
   },
   "scripts": {
