--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.3",
@@ -11,12 +12,15 @@
     "date-fns": "^2.29.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
+    "gsap": "^3.11.5",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^3.2.0",
