creation page review

--- a/.env
+++ b/.env
@@ -61,3 +61,4 @@ VITE_FRONT_URL_HISTCOINS ='/histCoins'
 VITE_FRONT_URL_BUYCOINS_STRIPE ='/buyCoinsStripe'
 VITE_FRONT_URL_PAIEMENT_VALIDE ='/ConfirmationPaiement'
 VITE_FRONT_URL_VOS_TRAJETS ='/TrajetsEnCours'
+VITE_FRONT_URL_REVIEW ='/driver-review'
