--- a/.env
+++ b/.env
@@ -29,7 +29,6 @@ VITE_FRONT_URL_HOME = "/"
 VITE_FRONT_URL_LOGIN = "/login"
 VITE_FRONT_URL_FORGET_LOGIN = "/forget-login"
 VITE_FRONT_URL_RESET_PASSWORD = "/reset-password"
-VITE_FRONT_URL_FORGET_EMAIL = "/forget-email"
 VITE_FRONT_URL_PASSWORD_MODIFIED = "/password-modified"
 VITE_FRONT_URL_ADMIN_HOME = "/admin"
 VITE_FRONT_URL_REGISTER = "/register"
@@ -62,3 +61,4 @@ VITE_FRONT_URL_BUYCOINS_STRIPE ='/buyCoinsStripe'
 VITE_FRONT_URL_PAIEMENT_VALIDE ='/ConfirmationPaiement'
 VITE_FRONT_URL_VOS_TRAJETS ='/TrajetsEnCours'
 VITE_FRONT_URL_REVIEW ='/driver-review'
+VITE_FRONT_URL_RESET_PASSWORD_MAIL_SENT = '/resest-password-mail'
