--- a/.env
+++ b/.env
@@ -23,6 +23,8 @@ VITE_URL_STRIPE ='/create-checkout-session'
 VITE_URL_TRADER ='/userTrader'
 VITE_URL_EMAIL_PAIEMENT ='/mailPaiement'
 VITE_URL_BACK_UPDATE_ROUTE ='/updatePath'
+VITE_URL_BACK_GET_DRIVER_REVIEW ='/getDriverReview'
+VITE_URL_BACK_DRIVER_NOTE = '/driverNote'
 
 ##### URL FRONT END ######
 VITE_FRONT_URL_HOME = "/"
