ajout de la connexion google

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ VITE_URL_STRIPE ='/create-checkout-session'
 VITE_URL_TRADER ='/userTrader'
 VITE_URL_EMAIL_PAIEMENT ='/mailPaiement'
 VITE_URL_BACK_UPDATE_ROUTE ='/updatePath'
+VITE_URL_BACK_GOOGLE_ROUTE ='/google'
 
 ##### URL FRONT END ######
 VITE_FRONT_URL_HOME = "/"
