modif recherche trajet + go searchbar fonctionnelle

--- a/.env
+++ b/.env
@@ -51,6 +51,8 @@ VITE_FRONT_URL_CARTE = "/carte"
 VITE_FRONT_URL_DELETE_ACCOUNT = "/deleteAccount"
 VITE_FRONT_URL_DELETE_ACCOUNT_MODAL = "/deleteAccountModal"
 VITE_FRONT_URL_SEARCH = "/search"
+VITE_FRONT_URL_SEARCH_SELECT = "/search/select"
+VITE_FRONT_URL_SEARCH_JOIN = "/search/join"
 VITE_FRONT_URL_TRAJET_CREATE = "/createTrajet"
 VITE_FRONT_URL_TRAJET_VALIDE = "/trajetvalide"
 VITE_FRONT_URL_TRAJET_SEARCH_VALIDE = "/validatedSearch"
